--- a/test/index.html
+++ b/test/index.html
@@ -22,20 +22,40 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <div id="app"></div>
 
     <!-- Add your scripts here -->
     <!-- <script src="..."></script> -->
     <script src="../lib/shp.js"></script>
+    <script src="./lib/svg.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         async function run() {
+
+          // Read the Natural Earth's db and extract a GeoJSON map:
           const shp = SHP();
           await shp.load('./db/ne_50m_admin_0_countries');
           const collection = shp.getCollection();
-          const feature = shp.getFeature(1);
-          console.log(collection);
+          // const feature = shp.getFeature(1);
+          // console.log(collection);
+
+          // Compute the SVG Map:
+          const options = { scale: 2, projection: 'mercator', mirror: 'x' };
+          const xmlstring = SVG.to(collection, options);
+
+          // Attach it to the DOM:
+          const el = document.getElementById('app');
+          el.insertAdjacentHTML('beforeend', xmlstring);
+
+          // Set attributes:
+          const svg = el.firstElementChild;
+          svg.setAttribute('width', '1000px');
+          svg.setAttribute('height', '1000px');
+          svg.setAttribute('fill', 'gray');
+          svg.firstElementChild.setAttribute('transform', 'translate(500, 500) scale(1, 1)');
         }
 
+        // Main
         run();
       });
     </script>
