--- a/test/index.html
+++ b/test/index.html
@@ -34,7 +34,7 @@
 
           // Read the Natural Earth's db and extract a GeoJSON map:
           const shp = SHP();
-          await shp.load('./db/ne_50m_admin_0_countries');
+          await shp.load('../db/ne_50m_admin_0_countries');
           const collection = shp.getCollection();
           // const feature = shp.getFeature(1);
           // console.log(collection);
